05_Kubernetes/nginx-app/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: testcluster
    http:
      paths:
      - path: /webserver
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
